# UniV2X_TensorRT

./: COMPAT_NOTES.md  compat.py
plugins/: CMakeLists.txt  compile_plugins.sh
plugins/plugin/grid_sampler/: gridSamplerKernel.cu  gridSamplerKernel.h
plugins/plugin/inverse/: inversePlugin.cpp
plugins/plugin/modulated_deformable_conv2d/: modulatedDeformableConv2dPlugin.cpp
plugins/plugin/multi_scale_deformable_attn/: multiScaleDeformableAttnKernel.cu  multiScaleDeformableAttnKernel.h  multiScaleDeformableAttnPlugin.cpp  multiScaleDeformableAttnPlugin.h
plugins/plugin/rotate/: rotateKernel.cu  rotateKernel.h
projects/mmdet3d_plugin/datasets/: spd_vehicle_e2e_dataset.py
projects/mmdet3d_plugin/datasets/eval_utils/: map_api.py
projects/mmdet3d_plugin/univ2x/detectors/: univ2x_track.py
projects/mmdet3d_plugin/univ2x/functions/: __init__.py  bev_pool_v2.py  multi_scale_deformable_attn.py  rotate.py
projects/mmdet3d_plugin/univ2x/modules/: multi_scale_deformable_attn_function.py
projects/mmdet3d_plugin/univ2x/modules/cnn/: __init__.py  dcn.py
tools/: test.py  train.py
tools/spd_data_converter/: spd_to_uniad.py
